feat: add products of interest selection

--- a/public/index.html
+++ b/public/index.html
@@ -147,6 +147,37 @@
               </label>
             </fieldset>
 
+            <fieldset class="form-field radio-group">
+              <legend>Produtos de interesse</legend>
+              <p class="field-hint">Selecione todos os itens que você quer receber ofertas.</p>
+              <div class="multi-option-grid">
+                <label class="inline-option">
+                  <input type="checkbox" id="produto_monitores" name="produtos_interesse" value="monitores_diagnostico" />
+                  <span>Monitores &amp; Diagnóstico portátil</span>
+                </label>
+                <label class="inline-option">
+                  <input type="checkbox" id="produto_consumo" name="produtos_interesse" value="materiais_consumo" />
+                  <span>Materiais de consumo</span>
+                </label>
+                <label class="inline-option">
+                  <input type="checkbox" id="produto_anestesia" name="produtos_interesse" value="aparelhos_anestesia" />
+                  <span>Aparelhos de anestesia</span>
+                </label>
+                <label class="inline-option">
+                  <input type="checkbox" id="produto_cirurgico" name="produtos_interesse" value="materiais_cirurgicos" />
+                  <span>Materiais cirúrgicos</span>
+                </label>
+                <label class="inline-option">
+                  <input type="checkbox" id="produto_exoticos" name="produtos_interesse" value="produtos_animais_exoticos" />
+                  <span>Produtos para animais exóticos</span>
+                </label>
+                <label class="inline-option">
+                  <input type="checkbox" id="produto_pecas" name="produtos_interesse" value="pecas_reposicao_manutencao" />
+                  <span>Peças de reposição &amp; manutenção</span>
+                </label>
+              </div>
+            </fieldset>
+
             <div id="form-status" class="form-status" role="alert" aria-live="polite"></div>
 
             <button type="submit" class="submit-button">Quero entrar na lista VIP</button>
