Otimização PageSpeed: JS minificado (-50% tamanho)
OTIMIZAÇÕES:
- promocoes.js: 40.5KB  20.4KB (-50%)
- app.js: 18.4KB  10.4KB (-44%)
- HTMLs atualizados para .min.js
- defer em vez de type=module

RESULTADO ESPERADO:
 -50% tempo download JS
 -50% parse/compile JS
 Melhor FCP e TTI
 Score PageSpeed Mobile improved

DEPLOYED: VPS + GitHub

--- a/public/index.html
+++ b/public/index.html
@@ -290,9 +290,9 @@
           <span>&copy; <span id="current-year"></span> RZ Equipamentos. Todos os direitos reservados.</span>
           <a href="https://rzvet.com.br" target="_blank" rel="noreferrer">Visite rzvet.com.br</a>
         </div>
-      </footer>
-    </div>
+    </footer>
+  </div>
 
-    <script type="module" src="/app.js"></script>
-  </body>
+  <script src="/app.min.js" defer></script>
+</body>
 </html>
