--- a/public/promocoes.html
+++ b/public/promocoes.html
@@ -251,7 +251,7 @@
       </svg>
     </a>
 
-    <script type="module" src="/promocoes.js"></script>
+    <script src="/promocoes.min.js" defer></script>
   </body>
 </html>
 
